--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <base href="/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +11,8 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
 
   <script src="assets/js/angular.js"></script>
-  <script src="assets/js/angular-route.js"></script>
+  <!-- <script src="assets/js/angular-route.js"></script> -->
+  <script src="assets/js/angular-ui-router.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/routes.js"></script>
 
@@ -32,12 +32,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="/">Bootstrap theme</a>
+        <a class="navbar-brand" ui-sref="home">Bootstrap theme</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
+          <li class="active"><a ui-sref="home">Home</a></li>
+          <li><a ui-sref="about">About</a></li>
           <li><a href="/contact">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -65,7 +65,8 @@
       <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
     </div>
 
-    <div ng-view></div>
+    <!-- <div ng-view></div> -->
+    <ui-view></ui-view>
 
   </div>
   <!-- /container -->
