--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -15,6 +15,7 @@
   <script src="assets/js/angular-ui-router.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/routes.js"></script>
+  <script src="app/controllers/userCtrl.js"></script>
 
   <title>Theme Template for Bootstrap</title>
 
@@ -38,7 +39,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a ui-sref="home">Home</a></li>
           <li><a ui-sref="about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a ui-sref="register">Register</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
