--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -10,11 +10,15 @@
 
     <!--css-->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+
 
     <!--main Angular libs-->
     <script src="assets/js/angular.js"></script>
     <!-- <script src="assets/js/angular-route.js"></script> -->
     <script src="assets/js/angular-ui-router.min.js"></script>
+    <script src="assets/js/angular-animate.js"></script>
 
     <!--Angular Config/Routes-->
     <script src="app/app.js"></script>
