--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -26,15 +26,17 @@
 
     <!--Angular Controllers-->
     <script src="app/controllers/userCtrl.js"></script>
+    <script src="app/controllers/mainCtrl.js"></script>
 
     <!--Angular Services-->
     <script src="app/services/userServices.js"></script>
+    <script src="app/services/authServices.js"></script>
 
     <title>Theme Template for Bootstrap</title>
 
 </head>
 
-<body ng-app="userApp">
+<body ng-app="userApp" ng-controller="mainCtrl as main">
 
 <!-- Fixed navbar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -52,7 +54,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="about">About</a></li>
+                <li><a ui-sref="login">Login</a></li>
                 <li><a ui-sref="register">Register</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
