Keep User Logged In Using JSON Web Tokens

--- a/public/app/views/pages/users/login.html
+++ b/public/app/views/pages/users/login.html
@@ -2,7 +2,7 @@
     <h1>User Login</h1>
 </div>
 
-<form ng-submit="main.doLogin(main.loginData)">
+<form ng-submit="main.doLogin()">
     <!--Username-->
     <label>Username:</label>
     <input class="form-control" type="text" name="username" placeholder="Please enter username"
