--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -56,6 +56,7 @@
                 <li class="active"><a ui-sref="home">Home</a></li>
                 <li><a ui-sref="login">Login</a></li>
                 <li><a ui-sref="register">Register</a></li>
+                <li><a ui-sref="logout" ng-click="main.logout()">Logout</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -68,6 +69,9 @@
                         <li><a href="#">Separated link</a></li>
                         <li><a href="#">One more separated link</a></li>
                     </ul>
+                </li>
+                <li ng-if="main.username">
+                    <a ui-sref="profile">Hello, {{main.username}}</a>
                 </li>
             </ul>
         </div>
