--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body ng-app="userApp" ng-controller="mainCtrl as main">
+<body ng-app="userApp" ng-controller="mainCtrl as main" ng-show="main.loadme" ng-cloak="">
 
 <!-- Fixed navbar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -54,9 +54,9 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="login">Login</a></li>
-                <li><a ui-sref="register">Register</a></li>
-                <li><a ui-sref="logout" ng-click="main.logout()">Logout</a></li>
+                <li><a ui-sref="login" ng-show="!main.isLoggedIn">Login</a></li>
+                <li><a ui-sref="register" ng-show="!main.isLoggedIn">Register</a></li>
+                <li><a ui-sref="logout" ng-show="main.isLoggedIn" ng-click="main.logout()">Logout</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -70,7 +70,7 @@
                         <li><a href="#">One more separated link</a></li>
                     </ul>
                 </li>
-                <li ng-if="main.username">
+                <li ng-show="main.isLoggedIn">
                     <a ui-sref="profile">Hello, {{main.username}}</a>
                 </li>
             </ul>
